# ada-assistant

./: .gitignore  README.md  pyproject.toml
src/assistant/: main.py
